--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DIGITAL SOUR</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
 
 
@@ -22,6 +22,7 @@
                 <li>Blog</li>
                 <li>Contacto</li>
             </ul>
+            <img src="Imagenes/hamburg.png" class="hamburg">
         </nav>
     </header>
     <main>
@@ -40,67 +41,68 @@
     <section>
         <div class="contenido">
             <img src="Imagenes/online-body-1.png" class="online">
-            <div class="Texto">
+            <div class="Texto ">
                 <div class="medios">- Medios digitales</div>
-                <h2 class="ayudanos">
+                <h2>
                     Cambiamos tus medios<br>
                     digitales con tu metricas<br>
                     de redes sociales
-                </h1>
-                <p class="parrafo-section">
-                    Using privacy-forward strategies and the latest technologies, we<br>
-                    leverage every paid social platform to engage the most relevant<br>
-                    audiences and tap into emerging ones...
-                </p>
-                <button>Ver más</button>
+                    </h1>
+                    <p class="parrafo-section">
+                        Using privacy-forward strategies and the latest technologies, we<br>
+                        leverage every paid social platform to engage the most relevant<br>
+                        audiences and tap into emerging ones...
+                    </p>
+                    <button>Ver más</button>
             </div>
         </div>
     </section>
 
     <section>
         <div class="contenido">
-            <div class="Texto">
+            <div class="Texto text2">
                 <div class="medios">- Medios digitales</div>
-                <h2 class="ayudanos">
+                <h2>
                     Cambiamos tus medios<br>
                     digitales con tu metricas<br>
                     de redes sociales
-                </h1>
-                <p class="parrafo-section">
-                    Using privacy-forward strategies and the latest technologies, we<br>
-                    leverage every paid social platform to engage the most relevant<br>
-                    audiences and tap into emerging ones...
-                </p>
-                <button>Ver más</button>
+                    </h1>
+                    <p class="parrafo-section">
+                        Using privacy-forward strategies and the latest technologies, we<br>
+                        leverage every paid social platform to engage the most relevant<br>
+                        audiences and tap into emerging ones...
+                    </p>
+                    <button>Ver más</button>
             </div>
-            <img src="Imagenes/online-body-2.png" class="online">
+            <img src="Imagenes/online-body-2.png" class="online online2">
+        </div>
+    </section>
+
+    <section>
+        <div class="contenido ">
+            <img src="Imagenes/online-body-3.png" class="online ">
+            <div class="Texto">
+                <div class="medios">- Medios digitales</div>
+                <h2>
+                    Cambiamos tus medios<br>
+                    digitales con tu metricas<br>
+                    de redes sociales
+                    </h1>
+                    <p class="parrafo-section">
+                        Using privacy-forward strategies and the latest technologies, we<br>
+                        leverage every paid social platform to engage the most relevant<br>
+                        audiences and tap into emerging ones...
+                    </p>
+                    <button>Ver más</button>
+            </div>
         </div>
     </section>
 
     <section>
         <div class="contenido">
-            <img src="Imagenes/online-body-3.png" class="online">
-            <div>
+            <div class="Texto text2">
                 <div class="medios">- Medios digitales</div>
-                <h2 class="ayudanos">
-                    Cambiamos tus medios<br>
-                    digitales con tu metricas<br>
-                    de redes sociales
-                </h1>
-                <p class="parrafo-section">
-                    Using privacy-forward strategies and the latest technologies, we<br>
-                    leverage every paid social platform to engage the most relevant<br>
-                    audiences and tap into emerging ones...
-                </p>
-                <button>Ver más</button>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="contenido">
-            <div>
-                <div class="medios">- Medios digitales</div>
-                <h2 class="ayudanos">
+                <h2>
                     Cambiamos tus medios<br>
                     digitales con tu metricas<br>
                     de redes sociales
@@ -112,7 +114,7 @@
                 </p>
                 <button>Ver más</button>
             </div>
-            <img src="Imagenes/online-body-4.png" class="online">
+            <img src="Imagenes/online-body-4.png" class="online online2">
         </div>
     </section>
 </body>
