--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <body>
     <header>
         <nav>
-            <img src="Imagenes/logotipo.png" class="logo">
+            <img src="imagenes/logotipo.png" class="logo">
             <ul>
-                <li>Home</li>
-                <li>Nosotros</li>
-                <li>Servicios</li>
-                <li>Blog</li>
-                <li>Contacto</li>
+                <a href="pages/index.html">Home</a>
+                <a href="pages/nosotros.html">Nosotros</a>
+                <a href="pages/blog.html">Servicios</a>
+                <a href="pages/blog.html">Blog</a>
+                <a href="pages/contacto.html">Contacto</a>
             </ul>
-            <img src="Imagenes/hamburg.png" class="hamburg">
+            <img src="imagenes/hamburg.png" class="hamburg">
         </nav>
     </header>
     <main>
@@ -36,24 +36,24 @@
             basados en data y desiciones rápidas.<br>
             <span>Somos tu socios no convencionales</span>
         </p>
-    </main>
+   
 
     <section>
         <div class="contenido">
-            <img src="Imagenes/online-body-1.png" class="online">
+            <img src="imagenes/online-body-1.png" class="online">
             <div class="Texto ">
                 <div class="medios">- Medios digitales</div>
                 <h2>
                     Cambiamos tus medios<br>
                     digitales con tu metricas<br>
                     de redes sociales
-                    </h1>
+                </h2>
                     <p class="parrafo-section">
                         Using privacy-forward strategies and the latest technologies, we<br>
                         leverage every paid social platform to engage the most relevant<br>
                         audiences and tap into emerging ones...
                     </p>
-                    <button>Ver más</button>
+                <button>Ver más</button>
             </div>
         </div>
     </section>
@@ -74,13 +74,13 @@
                     </p>
                     <button>Ver más</button>
             </div>
-            <img src="Imagenes/online-body-2.png" class="online online2">
+            <img src="imagenes/online-body-2.png" class="online online2">
         </div>
     </section>
 
     <section>
         <div class="contenido ">
-            <img src="Imagenes/online-body-3.png" class="online ">
+            <img src="imagenes/online-body-3.png" class="online">
             <div class="Texto">
                 <div class="medios">- Medios digitales</div>
                 <h2>
@@ -114,9 +114,16 @@
                 </p>
                 <button>Ver más</button>
             </div>
-            <img src="Imagenes/online-body-4.png" class="online online2">
+            <img src="imagenes/online-body-4.png" class="online online2">
         </div>
     </section>
+</main>
+
+    <footer>
+        <div class="siguenos">Siguenos en:</div>
+        <img src="imagenes/facebook.png" class="iconos">
+        <img src="imagenes/instagram.png" class="iconos">
+    </footer>
 </body>
 
 </html>
